Search vehicle by keyword or category
