# storage/api-docs/api-docs.json
@@ -137,6 +137,35 @@
                 ],
                 "summary": "Get Vehicles by categories for homepage",
                 "operationId": "vehicle_index",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/vehicle/search": {
+            "get": {
+                "tags": [
+                    "Vehicle"
+                ],
+                "summary": "Search Vehicles by categories or search keyword",
+                "operationId": "vehicle_search",
                 "parameters": [
                     {
                         "name": "category_id",
@@ -147,7 +176,7 @@
                         }
                     },
                     {
-                        "name": "searchKeyword",
+                        "name": "search_keyword",
                         "in": "query",
                         "required": false,
                         "schema": {
